--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1",
-    "react-hook-form": "4.9.3"
+    "react-hook-form": "4.9.3",
+    "react-mutation-observer": "^1.1.0",
+    "react-scripts": "3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
