--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "5.6.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watch --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
