--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "5.6.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-testing-library": "^8.0.1",
+    "rtl": "^0.1.18"
   },
   "scripts": {
     "start": "react-scripts start",
